objects/Dealer_Docs__c.object
<CustomObject>
    <fields>
        <fullName>AL_Sales_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true the document is a Sales Tax Document for Alabama (an acceptable replacement for a resale cert).</description>
        <inlineHelpText>Please check this box if the document is a Sales Tax Document for Alabama (an acceptable replacement for a resale certificate).</inlineHelpText>
        <label>AL Sales Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Active__c</fullName>
        <formula>Account__r.Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dealer Docs</relationshipLabel>
        <relationshipName>Dealer_Docs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Blitz_Trade_Show_Sign_Up__c</fullName>
        <description>Pulls blitz trade show results to Dealer Docs for list view access</description>
        <formula>Account__r.Blitz_Trade_Show_Sign_Up__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blitz Trade/Show Sign Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capital_Primary_Contact_Email__c</fullName>
        <label>Capital Primary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Compliance_Issues__c</fullName>
        <label>Compliance Issues</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Missing Signature</fullName>
                    <label>Missing signature</label>
                </value>
                <value>
                    <fullName>Incorrect State</fullName>
                    <label>Incorrect state</label>
                </value>
                <value>
                    <fullName>Document illegible</fullName>
                </value>
                <value>
                    <fullName>Incorrect document</fullName>
                </value>
                <value>
                    <fullName>Did not specify reason for exemption on MTC</fullName>
                </value>
                <value>
                    <fullName>State doesn&apos;t allow MTC for resale purpose</fullName>
                </value>
                <value>
                    <fullName>Resale not specified</fullName>
                </value>
                <value>
                    <fullName>Resale box not checked</fullName>
                </value>
                <value>
                    <fullName>Document expired</fullName>
                </value>
                <value>
                    <fullName>Missing Resale/Tax ID #</fullName>
                </value>
                <value>
                    <fullName>ACV Listed As Seller</fullName>
                    <label>ACV listed as seller</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compliant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_ID__c</fullName>
        <formula>Account__r.Dealership_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Created By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Dealer Docs (Document Created By)</relationshipLabel>
        <relationshipName>Dealer_Docs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Notes__c</fullName>
        <label>Document Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Document_State__c</fullName>
        <label>Document State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Abbreviations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dealer License</fullName>
                </value>
                <value>
                    <fullName>Resale Certificate</fullName>
                </value>
                <value>
                    <fullName>Certificate of Insurance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <inlineHelpText>You must enter an expiration date. If no expiration date is listed, it is this far out: AL = 1yr, AZ = 4yrs, MI = 4yrs, ME = 3yrs, LA = 3yrs, NE = 3yrs, WA = 4yrs, FL = 1yr. Ex: Document state = AZ; signature date = 2/28/19; expiration date = 2/28/23.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Reminder_Date__c</fullName>
        <description>This field contains a date two weeks before the expiration date for when a reminder will be sent to the IST Account Manager as needed.</description>
        <label>xExpiration Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extension_Granted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator if an account has been given an extension for a document that expired during quarantine in a state where the DMV has closed.</description>
        <label>Extension Granted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>File_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>File Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forty_Five_Day_Reminder_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is checked if a 45 day reminder email has been sent to the IST Account Manager letting them know a document was about to expire.</description>
        <label>45 Day Reminder Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IST_Account_Manager_Email__c</fullName>
        <description>IST Account Manager&apos;s email</description>
        <label>IST Account Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IST_Account_Manager__c</fullName>
        <formula>Account__r.IST_Account_Owner__r.FirstName + &quot; &quot; + Account__r.IST_Account_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IST Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Company_Name__c</fullName>
        <label>Insurance Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Coverage_Amount__c</fullName>
        <label>Inventory Coverage Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <label>License Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ML_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a document has been processed by ML already or not. Either by being uploaded through the app and processed by ML before hitting SF, or by being uploaded to SF and then reviewed by ML offline later.</description>
        <label>ML Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MTC__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark this box as checked/true, if dealer has supplied an MTC instead of a state-specific resale doc.  You should still indicate which state the MTC is being submitted for in the Document State field.</inlineHelpText>
        <label>MTC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Expiration__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If a resale certificate does not have an expiration date (all states except AZ, MI, NE, WA and FL), you must check this box.</inlineHelpText>
        <label>No Expiration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overall_Account_Compliance__c</fullName>
        <formula>TEXT(Account__r.Dealer_Doc_Compliance__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Account Compliance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_Resale_Number__c</fullName>
        <label>Permit/Resale Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <description>Field containing the primary contact&apos;s email for the related account.</description>
        <label>Primary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Related_Dealer_License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used on the Confirmation Doc record type. This is the lookup to the license the confirmation doc is a renewal for.</description>
        <label>Related Dealer License</label>
        <referenceTo>Dealer_Docs__c</referenceTo>
        <relationshipLabel>Dealer Docs</relationshipLabel>
        <relationshipName>Dealer_Docs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reminder_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is checked if a 14 day reminder email has been sent to the IST Account Manager letting them know a document was about to expire.</description>
        <label>14 Day Reminder Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reply_To_Email__c</fullName>
        <formula>IF(RecordType.Name = &quot;Certificate of Insurance&quot;, &quot;acvadvance@acvauctions.com&quot;, &quot;acvinfo@acvauctions.com&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reply To Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for Review</fullName>
                    <default>true</default>
                    <label>Ready for Review</label>
                </value>
                <value>
                    <fullName>Requires BDR</fullName>
                    <label>Requires IST</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>S3_Link__c</fullName>
        <description>This field holds the link to the related file in S3. Should never be visible on the page layout.</description>
        <label>S3 Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Email__c</fullName>
        <label>TM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Thirty_Day_Reminder_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is checked if a 30 day reminder email has been sent to the IST Account Manager letting them know a document was about to expire.</description>
        <label>30 Day Reminder Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <label>Dealer Doc</label>
    <listViews>
        <fullName>ACV_Capital_Expired_Insurance</fullName>
        <columns>NAME</columns>
        <columns>Dealer_ID__c</columns>
        <columns>Account__c</columns>
        <columns>Document_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Insurance_Company_Name__c</columns>
        <columns>Inventory_Coverage_Amount__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Capital_Primary_Contact_Email__c</columns>
        <columns>Compliant__c</columns>
        <columns>Compliance_Issues__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Dealer_Docs__c.Certificate_of_Insurance</value>
        </filters>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>lessThan</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>ACV Capital - Expired Insurance &gt;30 Days</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>IST_Account_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Certificate_of_Insurance</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Dealer_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Insurance_Company_Name__c</columns>
        <columns>Inventory_Coverage_Amount__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Compliant__c</columns>
        <columns>Compliance_Issues__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Dealer_Docs__c.Certificate_of_Insurance</value>
        </filters>
        <label>ACV Capital - Certificate of Insurance</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_Dealer_Docs_For_Review_Alex</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Document_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Review_Status__c</columns>
        <columns>Blitz_Trade_Show_Sign_Up__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Compliant__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Compliance_Issues__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Review_Status__c</field>
            <operation>equals</operation>
            <value>Ready for Review</value>
        </filters>
        <filters>
            <field>Document_Type__c</field>
            <operation>equals</operation>
            <value>Resale Certificate</value>
        </filters>
        <label>Copy of Dealer Docs For Review - Alex</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_Dealer_Docs_For_Review_Sawyer</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Document_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Review_Status__c</columns>
        <columns>Blitz_Trade_Show_Sign_Up__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Compliant__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Compliance_Issues__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Review_Status__c</field>
            <operation>equals</operation>
            <value>Ready for Review</value>
        </filters>
        <filters>
            <field>Document_Type__c</field>
            <operation>equals</operation>
            <value>Dealer License</value>
        </filters>
        <label>Copy of Dealer Docs For Review - Sawyer</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_Out_Of_Compliance_Docs_Dustin</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Compliance_Issues__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Review_Status__c</field>
            <operation>equals</operation>
            <value>Requires BDR</value>
        </filters>
        <filters>
            <field>IST_Account_Manager__c</field>
            <operation>equals</operation>
            <value>Dustin Johnson</value>
        </filters>
        <label>Copy of Out Of Compliance Docs - Dustin</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_Out_Of_Compliance_Docs_Jake_M</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Compliance_Issues__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IST_Account_Manager__c</field>
            <operation>equals</operation>
            <value>Jake Murray</value>
        </filters>
        <filters>
            <field>Review_Status__c</field>
            <operation>equals</operation>
            <value>Requires BDR</value>
        </filters>
        <label>Copy of Out Of Compliance Docs - Jake M</label>
    </listViews>
    <listViews>
        <fullName>Dealer_Docs_For_Review_Ryan</fullName>
        <booleanFilter>(((1 AND 2) OR 3) AND 4)</booleanFilter>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Document_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Review_Status__c</columns>
        <columns>Blitz_Trade_Show_Sign_Up__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Compliant__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Compliance_Issues__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Review_Status__c</field>
            <operation>equals</operation>
            <value>Ready for Review</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Dealer_Docs__c.Certificate_of_Insurance</value>
        </filters>
        <label>Dealer Docs For Review - Ryan</label>
        <sharedTo>
            <group>Dealer_Doc_Compliance</group>
            <role>Inside_Sales_Director</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Docs_with_Extension_Granted</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Compliant__c</columns>
        <columns>Extension_Granted__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>No_Expiration__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Extension_Granted__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Docs with Extension Granted</label>
    </listViews>
    <listViews>
        <fullName>In_Compliance_Docs_Jenna</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Compliance_Issues__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Document_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IST_Account_Manager__c</field>
            <operation>equals</operation>
            <value>Sara Fromwiller</value>
        </filters>
        <filters>
            <field>Review_Status__c</field>
            <operation>equals</operation>
            <value>Requires BDR</value>
        </filters>
        <label>In Compliance Docs- Jenna</label>
    </listViews>
    <listViews>
        <fullName>Out_Of_Compliance_Docs_Adam1</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Compliance_Issues__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IST_Account_Manager__c</field>
            <operation>equals</operation>
            <value>Adam Lucas</value>
        </filters>
        <filters>
            <field>Review_Status__c</field>
            <operation>equals</operation>
            <value>Requires BDR</value>
        </filters>
        <label>Out Of Compliance Docs - Adam</label>
    </listViews>
    <listViews>
        <fullName>Out_Of_Compliance_Docs_Do_Not_Call</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Compliance_Issues__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Review_Status__c</field>
            <operation>equals</operation>
            <value>Requires BDR</value>
        </filters>
        <filters>
            <field>IST_Account_Manager__c</field>
            <operation>equals</operation>
            <value>Do Not Call</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>notEqual</operation>
            <value>Sarah Bostock</value>
        </filters>
        <label>Out Of Compliance Docs - Do Not Call</label>
    </listViews>
    <listViews>
        <fullName>Out_Of_Compliance_Docs_Megan</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Compliance_Issues__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IST_Account_Manager__c</field>
            <operation>equals</operation>
            <value>Megan Condon</value>
        </filters>
        <filters>
            <field>Review_Status__c</field>
            <operation>equals</operation>
            <value>Requires BDR</value>
        </filters>
        <label>Out Of Compliance Docs - Megan</label>
        <sharedTo>
            <role>Inside_Sales_Director</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Out_Of_Compliance_Docs_Rob1</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Compliance_Issues__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Review_Status__c</field>
            <operation>equals</operation>
            <value>Requires BDR</value>
        </filters>
        <label>Out Of Compliance Docs - Rob</label>
    </listViews>
    <listViews>
        <fullName>Out_Of_Compliance_Docs_Sara</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Compliance_Issues__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IST_Account_Manager__c</field>
            <operation>equals</operation>
            <value>Sara Fromwiller</value>
        </filters>
        <filters>
            <field>Review_Status__c</field>
            <operation>equals</operation>
            <value>Requires BDR</value>
        </filters>
        <label>Out Of Compliance Docs - Sara</label>
    </listViews>
    <nameField>
        <displayFormat>DD-{0000}</displayFormat>
        <label>Dealer Docs Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Docs</pluralLabel>
    <recordTypes>
        <fullName>Certificate_of_Insurance</fullName>
        <active>true</active>
        <description>Used by ACV Capital to capture information around the Dealer&apos;s Insurance Documents</description>
        <label>Certificate of Insurance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dealer_License</fullName>
        <active>true</active>
        <description>Record type for Dealer Licenses</description>
        <label>Dealer License</label>
    </recordTypes>
    <recordTypes>
        <fullName>License_Renewal_Confirmation</fullName>
        <active>true</active>
        <description>Record type for License Renewal Confirmation documents</description>
        <label>License Renewal Confirmation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Resale_Certificate</fullName>
        <active>true</active>
        <description>Record type for Resale Certificates</description>
        <label>Resale Certificate</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AL_Sales_Tax_must_have_AL_and_Resale</fullName>
        <active>true</active>
        <description>If AL_Sales_Tax field is true, State must be AL AND Type must be Resale Cert.</description>
        <errorConditionFormula>AND(
AL_Sales_Tax__c = true, 
OR(
Text(Document_State__c) != &apos;AL&apos;, 
RecordType.DeveloperName != &apos;Resale_Certificate&apos;))</errorConditionFormula>
        <errorMessage>Can only select AL Sales Tax if the Document State is AL and the Document Type is a Resale Certificate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Can_not_mark_No_Expiration_with_Date</fullName>
        <active>true</active>
        <description>Throws an error if user sets &quot;No Expiration&quot; to true and they have an Expiration Date filled in.</description>
        <errorConditionFormula>AND(No_Expiration__c = True, NOT(ISNULL(Expiration_Date__c)))</errorConditionFormula>
        <errorDisplayField>Expiration_Date__c</errorDisplayField>
        <errorMessage>You can not input an Expiration Date if the No Expiration Date field is set to true.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_have_AL_Sales_Tax_AND_MTC_true</fullName>
        <active>true</active>
        <description>AL_Sales_Tax__c and MTC__c cannot both be marked as true.</description>
        <errorConditionFormula>AND(AL_Sales_Tax__c = true, MTC__c = true)</errorConditionFormula>
        <errorMessage>Cannot have both AL Sales Tax and MTC selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Confirmation_Doc_Not_Editable</fullName>
        <active>true</active>
        <description>Make sure no one can edit Confirmation Docs except admins and anyone with special permission.</description>
        <errorConditionFormula>AND(
$Profile.Name != &quot;System Administrator&quot;,
NOT($Permission.Bypass_Dealer_Doc_Lockdown),
RecordType.DeveloperName = &apos;License_Renewal_Confirmation&apos;,
OR(
ISCHANGED(Account__c),
ISCHANGED(License_Number__c),
ISCHANGED(Expiration_Date__c),
ISCHANGED(Related_Dealer_License__c))
)</errorConditionFormula>
        <errorMessage>This document should not need its information changed after creation. Please submit a salesforce Requests &amp; Inquiries ticket if you need something changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Docs_Not_Editable_After_Marked_Compliant</fullName>
        <active>true</active>
        <description>Certain fields on Docs should not be changed after the doc has been marked as compliant. Admins will still be able to edit.</description>
        <errorConditionFormula>OR(
AND(
$Profile.Name != &quot;System Administrator&quot;,
NOT($Permission.Bypass_Dealer_Doc_Lockdown),
Compliant__c = true,
PRIORVALUE(Compliant__c) = true, 
(OR(
ISCHANGED(Account__c),
ISCHANGED(Document_State__c),
ISCHANGED(License_Number__c),
ISCHANGED(Permit_Resale_Number__c),
ISCHANGED(Expiration_Date__c),
ISCHANGED(No_Expiration__c),
ISCHANGED(AL_Sales_Tax__c),
ISCHANGED(MTC__c)
))
),
AND(
$Profile.Name != &quot;System Administrator&quot;,
NOT($Permission.Bypass_Dealer_Doc_Lockdown),
Compliant__c = false,
ISCHANGED(Compliant__c)
)
)</errorConditionFormula>
        <errorMessage>Existing, compliant document records should not be edited.  Please submit a Requests &amp; Inquiries/Salesforce Request ticket, marked as &apos;Error message or bug&apos;, and an admin will review your proposed edits.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Document_Type</fullName>
        <active>true</active>
        <description>Rule that flows through the possible document types, depending on the document type corresponding fields will need to be filled out.</description>
        <errorConditionFormula>IF(
OR(
RecordType.DeveloperName = &apos;Dealer_License&apos;,
RecordType.DeveloperName = &apos;License_Renewal_Confirmation&apos;) 
&amp;&amp; License_Number__c = null , 
TRUE, 
IF(
RecordType.DeveloperName = &apos;Resale_Certificate&apos; 
&amp;&amp;  Permit_Resale_Number__c = null 
&amp;&amp; NOT(
INCLUDES(
Compliance_Issues__c, 
&apos;Missing Resale/Tax ID #&apos;)) , 
TRUE, 
IF(
RecordType.DeveloperName = &apos;Dealer_License&apos; 
&amp;&amp; Permit_Resale_Number__c != null, 
TRUE, 
IF(
RecordType.DeveloperName = &apos;Resale_Certificate&apos; 
&amp;&amp;  License_Number__c != Null, 
TRUE, 
False))))</errorConditionFormula>
        <errorMessage>A Dealer Doc that&apos;s a Dealer License must have a value in the License Number field and NO values in the Permit/Resale Number. A Dealer Doc that&apos;s a Resale Certificate must have a value in the Permit/Resale Number and NO value in the License Number field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ExpDate_Cannot_be_in_Past_if_Compliant</fullName>
        <active>true</active>
        <description>Cannot have an expiration date in the past if the document is compliant.</description>
        <errorConditionFormula>AND(
( Expiration_Date__c &lt; TODAY()),
( Compliant__c = TRUE)
)</errorConditionFormula>
        <errorMessage>Cannot have an expiration date in the past if the document is compliant. Please enter the correct expiration date or do not mark this record as compliant.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expiration_Date_Validation</fullName>
        <active>true</active>
        <description>If Document Type = Resale Certificate, and Document State = AZ, MI, NE, WA, ME, LA, IA, IL, or FL, force user to enter data in the Expiration Date field.</description>
        <errorConditionFormula>OR(
AND(
RecordType.DeveloperName = &apos;Resale_Certificate&apos;,  
MTC__c == False,
OR(
TEXT(Document_State__c)= &apos;AZ&apos;,
TEXT(Document_State__c)= &apos;MI&apos;,
TEXT(Document_State__c) =&apos;NE&apos;,
TEXT(Document_State__c)= &apos;WA&apos;,
TEXT(Document_State__c) =&apos;FL&apos;, 
TEXT(Document_State__c)=&apos;ME&apos;,
TEXT(Document_State__c)=&apos;LA&apos;,
TEXT(Document_State__c)=&apos;IA&apos;,
TEXT(Document_State__c)=&apos;IL&apos;),
ISNULL(Expiration_Date__c)),
AND(
ISNULL(Expiration_Date__c), 
AL_Sales_Tax__c == True))</errorConditionFormula>
        <errorDisplayField>Expiration_Date__c</errorDisplayField>
        <errorMessage>You must enter an expiration date. If no expiration date is listed, it is this far out: AL/FL = 1yr, AZ/MI/WA = 4yrs, ME/LA/NE/IA/IL = 3yrs. Ex: Document state = AZ; signature date = 2/28/19; expiration date = 2/28/23.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fill_out_Expiration_Field</fullName>
        <active>true</active>
        <description>If Document Type = Dealer License, force user to enter data in the Expiration Date field. Error msg: &quot;You must enter an expiration date for this document.&quot;</description>
        <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Dealer_License&apos;,
ISNULL(Expiration_Date__c),
AND(
TEXT(Document_State__c) != &apos;AZ&apos;,
TEXT(Document_State__c) != &apos;VT&apos;)
)</errorConditionFormula>
        <errorDisplayField>Expiration_Date__c</errorDisplayField>
        <errorMessage>You must enter an expiration date for this document.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fill_out_No_Expiration_Field</fullName>
        <active>false</active>
        <description>If Document Type = Resale Certificate, and Document State not equal to IL, AZ, LA, ME, MI, NE, WA or FL, force user to select &quot;true&quot; on the No Expiration field. Error msg: &quot;Please mark the &apos;No Expiration&apos; field as true for this record.&quot;</description>
        <errorConditionFormula>OR(
AND(
RecordType.DeveloperName = &apos;Resale_Certificate&apos;, 
MTC__c == false,
TEXT(Document_State__c) != &apos;IL&apos;,
TEXT(Document_State__c) != &apos;AZ&apos;,
TEXT(Document_State__c) != &apos;MI&apos;,
TEXT(Document_State__c) != &apos;NE&apos;,
TEXT(Document_State__c) != &apos;WA&apos;,
TEXT(Document_State__c) != &apos;FL&apos;,
TEXT(Document_State__c) != &apos;ME&apos;,
TEXT(Document_State__c) != &apos;LA&apos;,
TEXT(Document_State__c) != &apos;AL&apos;,
No_Expiration__c = FALSE),
AND(
RecordType.Name = &apos;Resale Certificate&apos;, 
No_Expiration__c = FALSE, 
TEXT(Document_State__c) = &apos;AL&apos;, 
AL_Sales_Tax__c = false))</errorConditionFormula>
        <errorDisplayField>No_Expiration__c</errorDisplayField>
        <errorMessage>Please mark the &apos;No Expiration&apos; field as true for this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Compliant_True_no_Compliance_issue</fullName>
        <active>true</active>
        <description>Validation rule that ensures if the Complaint checkbox is true there are no values selected in the Compliance Issues picklist.</description>
        <errorConditionFormula>AND( Compliant__c =True, ISNULL(Compliance_Issues__c )!=True)</errorConditionFormula>
        <errorDisplayField>Compliance_Issues__c</errorDisplayField>
        <errorMessage>Error message: A document cannot be marked as compliant and contain compliance issues. Please check your work and re-save. If you have any questions, please contact Sue Engasser.</errorMessage>
    </validationRules>
</CustomObject>